# chatserver

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  REQUIREMENTS-CLIENTS.md  REQUIREMENTS.md  bun.lockb  index.ts  logger.ts  package.json  ws-server.ts
.github/workflows/: ci-frontend.yml  ci-rust.yml  integration-test.yml
public/: app.js  index.html  styles.css
rust-client/: Cargo.toml
rust-client/src/: main.rs
rust-gui/: Cargo.toml
rust-gui/src/: main.rs
rust-ws/: .gitignore  Cargo.toml  Dockerfile  build.rs
rust-ws/src/: ai.rs  handlers.rs  main.rs  protocol.rs  state.rs  utils.rs
rust-wsbench/: Cargo.toml
rust-wsbench/src/: main.rs
rust-wsmonitor/: Cargo.toml
rust-wsmonitor/src/: main.rs
tools/: ws-benchmark-async.ts  ws-benchmark-worker.ts  ws-benchmark.ts
