[package]
name = "rust-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chat"
path = "src/main.rs"

[dependencies]
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync"] }
tokio-tungstenite = "0.28"
uuid = { version = "1", features = ["v4"] }
