[package]
name = "rust-ws"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["ws", "headers"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.6", features = ["v4"] }
