[package]
name = "rust-wsbench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wsbench"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
