[package]
name = "wsmonitor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wsmonitor"
path = "src/main.rs"

[dependencies]
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = "0.28"
uuid = { version = "1", features = ["v4"] }
